[gd_scene load_steps=56 format=3 uid="uid://ugfu6pob7c41"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_fwsmy"]
[ext_resource type="PackedScene" uid="uid://b4qyratd0pfy8" path="res://Menus/game_settings.tscn" id="2_6stdy"]
[ext_resource type="PackedScene" uid="uid://bu5xeb3snxqmx" path="res://Assets/Particles/catch_particles.tscn" id="2_40458"]
[ext_resource type="PackedScene" uid="uid://di7kjb7yshrqr" path="res://Player/_Player.glb" id="2_a56bu"]
[ext_resource type="Material" uid="uid://c14wcr4tvi78f" path="res://Assets/Bubble/BubbleMat.tres" id="3_1s7s4"]
[ext_resource type="PackedScene" uid="uid://cbp7grruglafr" path="res://Assets/Particles/buble_particles.tscn" id="3_wm6i5"]
[ext_resource type="Material" uid="uid://6gq34esneoup" path="res://Player/player_face.tres" id="5_53d75"]
[ext_resource type="Script" path="res://addons/wigglebone/wiggle_bone.gd" id="6_p4kof"]
[ext_resource type="Script" path="res://addons/wigglebone/wiggle_properties.gd" id="7_o5d8f"]
[ext_resource type="PackedScene" uid="uid://bw08hplsjqkn" path="res://Assets/Particles/net_swing_particles.tscn" id="8_rnsxc"]
[ext_resource type="Script" path="res://Player/arcade_timer.gd" id="9_dlwh1"]
[ext_resource type="PackedScene" uid="uid://dwmpbi5874ctd" path="res://Menus/credits_screen.tscn" id="10_ri4gx"]
[ext_resource type="PackedScene" uid="uid://81mrrtqupr0k" path="res://Menus/animal_descriptor_card.tscn" id="11_sa8ai"]
[ext_resource type="AudioStream" uid="uid://udqlalfpr0lk" path="res://Audio/Player/SFX_Player_Swing.wav" id="12_spsjk"]
[ext_resource type="AudioStream" uid="uid://4duojdev7acf" path="res://Audio/Player/SFX_Player_Stun.wav" id="13_xi85u"]
[ext_resource type="AudioStream" uid="uid://d37x10k0f5kxs" path="res://Audio/AI/SFX_Animal_Capture.wav" id="14_5cu6a"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bepga"]

[sub_resource type="Resource" id="Resource_w0sh2"]
script = ExtResource("7_o5d8f")
mode = 0
stiffness = 0.1
damping = 0.1
gravity = Vector3(0, 0, 0)
length = 0.1
max_distance = 0.1
max_degrees = 60.0

[sub_resource type="SphereShape3D" id="SphereShape3D_cwrt8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3iecj"]
animation = &"_Player_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xdcwf"]
animation = &"_Player_Idle_RaisedNet"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rnimc"]
animation = &"_Player_Crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kfdwo"]
animation = &"_Player_Crouch_RaisedNet"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5npld"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3iecj")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_xdcwf")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_rnimc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kfdwo")
blend_point_3/pos = Vector2(1, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_emmkr"]
animation = &"_Player_JumpStart"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oil5i"]
animation = &"_Player_SwingNet"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_kt27l"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_h1fm1"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_oil5i")
nodes/Animation/position = Vector2(-285.012, 209.854)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_kt27l")
nodes/TimeScale/position = Vector2(-53.3333, 186.667)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u33dc"]
animation = &"_Player_Crouch_Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ejuvu"]
animation = &"_Player_Walk_RaisedNet"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4pqo3"]
animation = &"_Player_Crouch_Walk_RaisedNet"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vh7sv"]
animation = &"_Player_Walk"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_lkwd0"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_7f548"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_rr1iu"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_bv4wx"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_oe1qr"]
graph_offset = Vector2(-834, 39)
nodes/Animation/node = SubResource("AnimationNodeAnimation_vh7sv")
nodes/Animation/position = Vector2(-640, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_u33dc")
"nodes/Animation 2/position" = Vector2(-693.333, 400)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_ejuvu")
"nodes/Animation 3/position" = Vector2(-666.667, 213.333)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_4pqo3")
"nodes/Animation 4/position" = Vector2(-720, 533.333)
nodes/Crouch/node = SubResource("AnimationNodeBlend2_lkwd0")
nodes/Crouch/position = Vector2(-106.667, 133.333)
nodes/CrouchRaised/node = SubResource("AnimationNodeBlend2_7f548")
nodes/CrouchRaised/position = Vector2(-373.333, 346.667)
nodes/WalkRaised/node = SubResource("AnimationNodeBlend2_rr1iu")
nodes/WalkRaised/position = Vector2(-400, 53.3333)
nodes/WalkSpeed/node = SubResource("AnimationNodeTimeScale_bv4wx")
nodes/WalkSpeed/position = Vector2(106.667, 160)
node_connections = [&"Crouch", 0, &"WalkRaised", &"Crouch", 1, &"CrouchRaised", &"CrouchRaised", 0, &"Animation 2", &"CrouchRaised", 1, &"Animation 4", &"WalkRaised", 0, &"Animation", &"WalkRaised", 1, &"Animation 3", &"WalkSpeed", 0, &"Crouch", &"output", 0, &"WalkSpeed"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t68id"]
animation = &"_Player_JumpLoop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_va2q5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lbw58"]
xfade_time = 0.13
advance_mode = 2
advance_expression = "is_on_floor() and not velocity.is_zero_approx()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_haj1m"]
xfade_time = 0.13
advance_mode = 2
advance_expression = "is_on_floor() and velocity.is_zero_approx()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsxxd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w3733"]
xfade_time = 0.25
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsk8e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sl22a"]
xfade_time = 0.13
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ncsf"]
xfade_time = 0.13

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v8x4y"]
xfade_time = 0.13

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k185y"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pkkhv"]
xfade_time = 0.25
advance_mode = 2
advance_expression = "not is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sx8xt"]
xfade_time = 0.25
advance_mode = 2
advance_expression = "not is_on_floor()
"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dj2ha"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b3yls"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_5npld")
states/Idle/position = Vector2(300, 109.888)
states/Jump/node = SubResource("AnimationNodeAnimation_emmkr")
states/Jump/position = Vector2(700.667, 116)
states/Start/position = Vector2(168, 109.333)
states/Swing/node = SubResource("AnimationNodeBlendTree_h1fm1")
states/Swing/position = Vector2(299.333, 249.333)
states/Walk/node = SubResource("AnimationNodeBlendTree_oe1qr")
states/Walk/position = Vector2(486.667, 52.6667)
states/_Player_JumpLoop/node = SubResource("AnimationNodeAnimation_t68id")
states/_Player_JumpLoop/position = Vector2(700.667, 220)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_va2q5"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_lbw58"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_haj1m"), "Idle", "Swing", SubResource("AnimationNodeStateMachineTransition_bsxxd"), "Swing", "Idle", SubResource("AnimationNodeStateMachineTransition_w3733"), "Walk", "Swing", SubResource("AnimationNodeStateMachineTransition_bsk8e"), "_Player_JumpLoop", "Idle", SubResource("AnimationNodeStateMachineTransition_sl22a"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_8ncsf"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_v8x4y"), "Jump", "_Player_JumpLoop", SubResource("AnimationNodeStateMachineTransition_k185y"), "Walk", "_Player_JumpLoop", SubResource("AnimationNodeStateMachineTransition_pkkhv"), "Idle", "_Player_JumpLoop", SubResource("AnimationNodeStateMachineTransition_sx8xt"), "_Player_JumpLoop", "Swing", SubResource("AnimationNodeStateMachineTransition_dj2ha")]
graph_offset = Vector2(37, 31)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onaw2"]
bg_color = Color(0.152941, 0.152941, 0.215686, 0.94902)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0923971, 0.0923971, 0.092397, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ijiru"]
playback_mode = 2
random_pitch = 1.2
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("13_xi85u")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7fmrd"]
playback_mode = 2
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("14_5cu6a")

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("player_mesh")]
collision_layer = 32
collision_mask = 139
platform_floor_layers = 3
script = ExtResource("1_fwsmy")
catch_particles = ExtResource("2_40458")
buble_particles = ExtResource("3_wm6i5")
player_mesh = NodePath("Player/root/Skeleton3D/_Player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_bepga")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.5, 0)
collision_mask = 3
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.5)

[node name="Player" parent="." instance=ExtResource("2_a56bu")]

[node name="root" parent="Player" index="0"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Player/root" index="0"]
bones/0/position = Vector3(-0.513218, 0.883699, -0.0754498)
bones/0/rotation = Quaternion(-0.103492, 0.855597, 0.461694, 0.209956)
bones/1/position = Vector3(8.56817e-08, 0.747946, -1.04308e-07)
bones/1/rotation = Quaternion(-0.5, -0.5, 0.5, -0.5)
bones/2/position = Vector3(-1.04308e-07, 0.0073476, 1.49012e-07)
bones/2/rotation = Quaternion(-9.31323e-10, -3.74501e-10, 1.62981e-09, 1)
bones/3/position = Vector3(-1.78814e-07, 0.00669292, -8.94071e-08)
bones/3/rotation = Quaternion(1.60653e-08, -2.42144e-07, -1.16415e-09, 1)
bones/4/position = Vector3(0.00365939, 1.04838, 0.0103402)
bones/4/rotation = Quaternion(-0.00158589, -1.30112e-05, 0.00828033, 0.999964)
bones/5/rotation = Quaternion(0.00883468, -6.44055e-05, -0.00728961, 0.999934)
bones/6/rotation = Quaternion(-0.00188455, 2.92497e-06, -0.00155208, 0.999997)
bones/8/position = Vector3(-2.79392e-09, -0.0541679, 0.661801)
bones/8/rotation = Quaternion(0.0436525, 0.730623, 0.679663, 0.0484055)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(2.41413e-09, 0.196829, 1.55359e-08)
bones/9/rotation = Quaternion(0.0926785, 0.112168, -0.00895768, 0.989317)
bones/10/rotation = Quaternion(0.235086, 0.00974954, 0.000811439, 0.971925)
bones/11/rotation = Quaternion(-0.251119, -0.00734836, -0.00351702, 0.967922)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.48945, 0.507343, 0.509496, 0.493413)
bones/13/rotation = Quaternion(-0.232839, 0.224046, -0.431561, 0.842226)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(1.64061e-08, -0.313736, -3.56128e-08, 0.94951)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(-4.41719e-08, -6.14112e-08, 0.513574, 0.858045)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-3.52982e-09, 0.000773789, -1.93631e-10, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-6.06524e-08, 2.58442e-08, -1.92085e-08, 1)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.492803, 0.504074, 0.506253, -0.496752)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.248926, 0.130172, 0.254357, 0.925416)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-5.99461e-08, -0.095218, 6.2048e-08, 0.995456)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(6.90224e-08, -2.09319e-08, -0.599295, 0.800528)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(3.12826e-10, -0.000840718, 7.6728e-09, 1)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(6.2224e-08, -2.32831e-08, 1.33296e-08, 1)
bones/24/rotation = Quaternion(0.483145, 0.458056, 0.611021, 0.428263)
bones/24/scale = Vector3(1.00001, 0.999996, 0.999989)
bones/25/rotation = Quaternion(-4.1578e-08, -0.151176, -1.04495e-07, 0.988507)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(-4.31676e-08, -6.8893e-08, 0.901244, 0.433312)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.243909, 0.560662, -0.404685, 0.679998)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(-4.05942e-05, 0.976194, 0.216898, -9.13993e-06)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-8.12964e-08, -0.0719744, 1.09124e-07, 0.997406)
bones/30/rotation = Quaternion(0.567166, -0.378517, -0.646999, 0.341233)
bones/30/scale = Vector3(1.00001, 0.999991, 0.999995)
bones/31/rotation = Quaternion(-2.66084e-09, 0.110413, 8.07085e-08, 0.993886)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-7.23242e-08, 8.20328e-08, -0.790054, 0.613038)
bones/32/scale = Vector3(1, 1, 1)
bones/33/rotation = Quaternion(0.30179, -0.653066, 0.36217, 0.592673)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(1.7555e-05, 0.976252, 0.216639, 3.88509e-06)
bones/35/rotation = Quaternion(-3.82425e-11, 0.00693687, -2.11633e-08, 0.999976)
bones/36/position = Vector3(-6.4888e-09, 0.0383555, -0.000893635)
bones/36/rotation = Quaternion(0.088492, 0.000162925, -0.0131759, 0.99599)
bones/37/position = Vector3(0.131328, 0.0269435, 0.138942)
bones/37/rotation = Quaternion(0.268895, 0.244823, 0.921673, -0.13519)
bones/37/scale = Vector3(0.999999, 1, 0.999997)
bones/38/position = Vector3(1.93387e-08, 0.244458, -3.35276e-08)
bones/38/rotation = Quaternion(0.235758, -3.98873e-07, 1.05134e-06, 0.971812)
bones/39/position = Vector3(0.144945, 0.00375043, -7.80818e-05)
bones/39/rotation = Quaternion(0.68801, 0.163226, 0.68801, -0.163226)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.179635, 1.26743e-07, 8.64117e-08, 0.983733)
bones/41/position = Vector3(0.0834466, -1.27494e-07, -0.144534)
bones/41/rotation = Quaternion(0.939825, 0.0597605, 0.251826, -0.22303)
bones/41/scale = Vector3(1, 1, 1)
bones/42/position = Vector3(3.29732e-08, 0.244458, 1.60187e-07)
bones/42/rotation = Quaternion(0.110989, -0.0392611, -0.000857281, 0.993046)
bones/42/scale = Vector3(1, 1, 1)
bones/43/position = Vector3(-0.162447, 0.00173772, 0.136521)
bones/43/rotation = Quaternion(-0.256278, 0.134995, 0.956446, 0.0361725)
bones/43/scale = Vector3(0.999999, 1.00968, 0.999996)
bones/44/position = Vector3(-3.86501e-08, 0.244458, -2.23517e-08)
bones/44/rotation = Quaternion(-0.2175, 6.75177e-07, 1.0363e-06, 0.97606)
bones/45/position = Vector3(-0.164417, 0.016626, -0.00185395)
bones/45/rotation = Quaternion(0.690562, -0.151008, -0.693756, -0.137926)
bones/45/scale = Vector3(1, 0.99843, 1)
bones/46/rotation = Quaternion(0.141809, -2.72359e-07, 4.13118e-08, 0.989894)
bones/47/position = Vector3(-0.0840404, -0.0620266, -0.150893)
bones/47/rotation = Quaternion(0.952523, -0.0429657, -0.255228, -0.160351)
bones/47/scale = Vector3(0.873484, 0.86325, 0.873485)
bones/48/position = Vector3(-2.5299e-09, 0.244458, -7.45057e-09)
bones/48/rotation = Quaternion(-0.18017, -0.0431118, -0.0192797, 0.982501)
bones/48/scale = Vector3(1, 1, 1)

[node name="_Player" parent="Player/root/Skeleton3D" index="1"]
surface_material_override/1 = ExtResource("5_53d75")
surface_material_override/2 = ExtResource("3_1s7s4")

[node name="WiggleBone" type="BoneAttachment3D" parent="Player/root/Skeleton3D" index="2"]
transform = Transform3D(0.999849, -0.0173857, 0.00011895, 0.0173861, 0.999825, -0.00691566, 1.30488e-06, 0.00691668, 0.999976, 0.00365572, 1.04853, 0.011705)
bone_name = "cc_Bubble_1"
bone_idx = 4
script = ExtResource("6_p4kof")
properties = SubResource("Resource_w0sh2")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Player/root/Skeleton3D" index="3"]
transform = Transform3D(-0.890415, -0.370966, 0.263713, 0.016776, 0.552256, 0.833506, -0.45484, 0.74659, -0.485514, -0.513218, 0.883699, -0.0754498)
bone_name = "cc_Net"
bone_idx = 0

[node name="BubbleOffset" type="Node3D" parent="Player/root/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(1, -5.96046e-08, -2.23517e-08, 0, 1, 4.47035e-08, 2.98023e-08, -1.49012e-08, 1, 0, 0.777, 0)

[node name="SwingParticles" parent="Player/root/Skeleton3D/BoneAttachment3D/BubbleOffset" instance=ExtResource("8_rnsxc")]
unique_name_in_owner = true
visibility_aabb = AABB(-0.545578, -0.331995, -0.3, 1.05245, 1.02369, 1.52011)

[node name="AnimationPlayer" parent="Player" index="1"]
reset_on_save = false

[node name="AudioListener3D" type="AudioListener3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
current = true

[node name="NetHitbox" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -1)
collision_layer = 32
collision_mask = 136
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/NetHitbox"]
shape = SubResource("SphereShape3D_cwrt8")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="CatchStunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CatchSwingAnticipation" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ArcadeTimer" type="Timer" parent="."]
wait_time = 180.0

[node name="AnimalCardShownTime" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Player")
tree_root = SubResource("AnimationNodeStateMachine_b3yls")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../Player/AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Swing/TimeScale/scale = 1.0
parameters/Walk/Crouch/blend_amount = 0.0
parameters/Walk/CrouchRaised/blend_amount = 0.0
parameters/Walk/WalkRaised/blend_amount = 0.0
parameters/Walk/WalkSpeed/scale = 1.0

[node name="Settings" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -96.0
offset_right = -48.0
offset_bottom = 96.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="GameSettings" parent="Settings/PanelContainer/MarginContainer" instance=ExtResource("2_6stdy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Time" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("9_dlwh1")
critical_color = Color(0.993394, 2.28621e-06, 1.73271e-06, 1)

[node name="PanelContainer" type="PanelContainer" parent="Time"]
offset_left = 31.0
offset_top = 31.0
offset_right = 234.0
offset_bottom = 118.0

[node name="MarginContainer" type="MarginContainer" parent="Time/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="TimeLabel" type="Label" parent="Time/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Time: 0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="CreditsScreen" parent="GameOver" instance=ExtResource("10_ri4gx")]

[node name="AnimalCard" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="AnimalCard"]
anchors_preset = -1
anchor_top = 0.225309
anchor_bottom = 0.774691
offset_left = 31.0
offset_right = 271.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_onaw2")

[node name="MarginContainer" type="MarginContainer" parent="AnimalCard/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="AnimalDescriptorCard" parent="AnimalCard/PanelContainer/MarginContainer" instance=ExtResource("11_sa8ai")]
unique_name_in_owner = true
layout_mode = 2

[node name="Audio" type="Node" parent="."]

[node name="Swing" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_spsjk")
volume_db = -12.117
bus = &"SFX"

[node name="PainBounce" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_ijiru")
volume_db = -13.126
pitch_scale = 0.25
bus = &"SFX"

[node name="Capture" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_7fmrd")
bus = &"SFX"

[connection signal="timeout" from="HurtTimer" to="." method="set_face_idx" binds= [0]]
[connection signal="timeout" from="CatchStunTimer" to="." method="_on_catch_stun_timer_timeout"]
[connection signal="timeout" from="ArcadeTimer" to="." method="_on_arcade_timer_timeout"]
[connection signal="timeout" from="AnimalCardShownTime" to="." method="_on_animal_card_shown_time_timeout"]
[connection signal="continue_pressed" from="Settings/PanelContainer/MarginContainer/GameSettings" to="." method="_on_game_settings_continue_pressed"]
[connection signal="quit_pressed" from="Settings/PanelContainer/MarginContainer/GameSettings" to="." method="_on_game_settings_quit_pressed"]

[editable path="Player"]
